# OrchAI

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TASKS.md  TODOS.md  config.json  orchai.cmd  pyproject.toml  task.md
.agent/: critic_auditor.md  engine_specialist.md  explorer.md  reviewer.md  tester.md  testing_specialist.md
.agents/workflows/: run.md  setup.md
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml  docker.yml
apps/cli/: main.py  ui.py
apps/orchestrator/: __init__.py  main.py
apps/orchestrator/api/: __init__.py  deps.py  models.py
apps/orchestrator/api/routes/: approvals.py  conversations.py  decisions.py  executions.py  projects.py  tasks.py
apps/orchestrator/discord/: __init__.py  adapter.py  gateway.py  routes.py  service.py
apps/orchestrator/services/: __init__.py  chat_commands.py  chat_ingress_service.py  orchestrator_service.py  project_runtime.py
apps/orchestrator/slack/: __init__.py  adapter.py  routes.py  service.py  socket_mode.py
apps/orchestrator/workflows/: __init__.py  council.py  representative.py
configs/: platform.yaml
configs/projects/: sample-discord-project.yaml  sample-slack-project.yaml
data/: projects.json
docs/: ARCHITECTURE.md  CLI_ORCHESTRATOR_PIVOT.md  DEPLOYMENT.md  GIT_STRATEGY.md  HANDOFF.md  HISTORY.md  OPERATIONS_MANUAL.md  RUN_LOCAL.md
infra/: Dockerfile  docker-compose.yml
tests/: test_agent_factory.py  test_api_smoke.py  test_chat_adapters.py  test_chat_event_guardrails.py  test_chat_ingress.py  test_claude_cli_driver.py  test_cli_ui.py  test_config_service.py  test_discord_gateway_runtime.py  test_execution_adapters.py  test_file_store.py  test_hive_logic.py  test_orchestration_flow.py  test_policy_rules.py  test_provider_api_drivers.py  test_provider_cli_drivers.py  test_slack_socket_mode.py
